// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon> renders 1`] = `
<Image
  resizeMode="contain"
  source={
    Object {
      "uri": undefined,
    }
  }
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "height": 20,
        "width": 20,
      },
      undefined,
      undefined,
    ]
  }
/>
`;

exports[`<Icon> when {color} (only Native) 1`] = `
<Image
  resizeMode="contain"
  source={
    Object {
      "uri": undefined,
    }
  }
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "height": 20,
        "width": 20,
      },
      undefined,
      Object {
        "tintColor": "#ef5160",
      },
    ]
  }
/>
`;

exports[`<Icon> when {invert} (only Web) 1`] = `
<Image
  resizeMode="contain"
  source={
    Object {
      "uri": undefined,
    }
  }
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "height": 20,
        "width": 20,
      },
      undefined,
      Object {},
    ]
  }
/>
`;

exports[`<Icon> when {size} 1`] = `
<Image
  resizeMode="contain"
  source={
    Object {
      "uri": undefined,
    }
  }
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "height": 20,
        "width": 20,
      },
      undefined,
      Object {
        "height": 48,
        "width": 48,
      },
    ]
  }
/>
`;

exports[`<Icon> when {style} 1`] = `
<Image
  resizeMode="contain"
  source={
    Object {
      "uri": undefined,
    }
  }
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "height": 20,
        "width": 20,
      },
      Object {
        "backgroundColor": "#f69a37",
      },
      undefined,
    ]
  }
/>
`;

exports[`<Icon> when {value} 1`] = `
<Image
  resizeMode="contain"
  source={
    Object {
      "uri": "menu",
    }
  }
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "height": 20,
        "width": 20,
      },
      undefined,
      undefined,
    ]
  }
/>
`;

exports[`<Icon> when {value} as uri 1`] = `
<Image
  resizeMode="contain"
  source={
    Object {
      "uri": "https://api.adorable.io/avatars/48/8",
    }
  }
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "height": 20,
        "width": 20,
      },
      undefined,
      undefined,
    ]
  }
/>
`;
